--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "graphql": "^15.6.1",
-    "graphql-request": "^3.5.0",
-    "html-react-parser": "^1.4.0",
+    "graphql": "^15.8.0",
+    "graphql-request": "^3.7.0",
+    "html-react-parser": "^1.4.8",
     "moment": "^2.29.1",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-multi-carousel": "^2.6.5",
-    "sass": "^1.42.1",
+    "react-multi-carousel": "^2.8.0",
+    "sass": "^1.49.9",
     "swr": "^1.0.1"
   },
   "devDependencies": {
@@ -34,6 +34,6 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.19"
   }
 }
